syntax = "proto3";

package paniccollector;
option go_package = "github.com/brandcompete/panic-collector/paniccollector;paniccollector";

service PanicCollector {
  rpc CollectPanic (PanicRequest) returns (PanicResponse) {}
  rpc GetPublicKey (PublicKeyRequest) returns (PublicKeyResponse) {}
}

message PanicRequest {
  string encrypted_data = 1;
}

message PanicResponse {
  string message = 1;
  int32 status = 2;
}

message PublicKeyRequest {}

message PublicKeyResponse {
  string public_key = 1;
}